add hacky support for custom feeds

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <h1>Bluestream</h1>
   <div>
     <p>RSS feed generator for Bluesky.</p>
-    <p>Access to the path /bsky-handle directory or input handle of Bluesky here ↓</p>
+    <p>Access to the path /bsky-handle, /at://feed directory or input handle or feed at:// URI here ↓</p>
     <form id="form">
       <div>
         <input id="input-handle" name="input-handle" aria-label="input-handle" required autofocus placeholder="xxx.bsky.social" />
@@ -73,7 +73,8 @@
     <p>You can use DID (like <code>did:plc:xxxx</code>) instead of handle.</p>
     <p>Currently only posts in bsky.social is supported.</p>
     <p>
-      <a title="https://github.com/kawarimidoll/bluestream" target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/kawarimidoll/bluestream">https://github.com/kawarimidoll/bluestream</a>
+      <a title="https://github.com/Erisa/bluestream" target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/Erisa/bluestream">https://github.com/Erisa/bluestream</a>
+    </br>Fork of <a title="https://github.com/kawarimidoll/bluestream" target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/kawarimidoll/bluestream">https://github.com/kawarimidoll/bluestream</a>
     </p>
   </div>
   <script>
